<resources>
    <string name="app_name">智体运动</string>

    <string name="match_apply">大赛报名</string>
    <string name="match_grade">比赛成绩</string>
    <string name="discover">发现</string>
    <string name="pcenter">个人中心</string>
    <string name="back">返回</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="matchapply_search_hint">输入关键字搜索比赛</string>
    <string name="release">发布</string>
    <string name="discover_search_hint">搜索文章，动态，用户</string>
    <string name="pcenter_release">发布:</string>
    <string name="pcenter_follow">关注:</string>
    <string name="pcenter_fans">粉丝:</string>
    <string name="pcenter_waitpay">待支付</string>
    <string name="pcenter_waitperfect">待完善</string>
    <string name="pcenter_success">已成功</string>
    <string name="pcenter_allmatch">全部比赛</string>
    <string name="pcenter_applycard">我的报名卡</string>
    <string name="pcenter_grade">我的成绩</string>
    <string name="pcenter_medal">我的奖章</string>
    <string name="pcenter_order">我的订单</string>
    <string name="pcenter_help">帮助与反馈</string>
    <string name="pcenter_about">关于我们</string>
    <string name="pcenter_privacy">隐私政策</string>
    <string name="login_edit_number">请输入手机号码</string>
    <string name="login_edit_verifycode">请输入验证码</string>
    <string name="login_str">登录</string>
    <string name="login_social">社交账号登录</string>
    <string name="login_get_vertify">获取验证码</string>
    <string name="login_empty">手机号和验证码不能为空</string>
    <string name="login_phonenum_empty">手机号不能为空，请输入手机号</string>
    <string name="login_phonenum_error">请输入正确的手机号</string>
    <string name="login_reset_get">重新获取</string>
    <string name="login_success">登录成功</string>
    <string name="wx_no_install">您还未安装微信客户端</string>
    <string name="wx_pay_failed">调起微信支付失败，请重试</string>
    <string name="sinawb_no_install">您还未安装新浪微博客户端</string>
    <string name="sina_login_success">新浪微博授权成功</string>
    <string name="sina_login_cancle">取消新浪微博授权</string>
    <string name="sina_login_failed">新浪微博授权失败</string>
    <string name="pay_failed">支付失败，请重试</string>
    <string name="pay_cancel">取消支付</string>
    <string name="pay_success">支付成功</string>
    <string name="qq_no_install">您还未安装手机QQ客户端</string>
    <string name="qq_login_success">QQ登录授权成功</string>
    <string name="qq_login_failed">QQ登录授权失败</string>
    <string name="qq_login_cancel">取消QQ登录</string>
    <string name="wechat_authorizationlogin_failed">微信授权登录失败</string>
    <string name="login_finish">退出登录页</string>
    <string name="edit_msg">编辑资料</string>
    <string name="setting">设置</string>
    <string name="apply_msg">报名信息</string>
    <string name="personal_msg">个人信息</string>
    <string name="save">保存</string>
    <string name="header">头像</string>
    <string name="photo">相册</string>
    <string name="take_picture">拍照</string>
    <string name="refuse_permission">用户拒绝了该权限</string>
    <string name="upload_success">上传成功</string>
    <string name="save_success">保存成功</string>
    <string name="wait_auth">申请认证</string>
    <string name="pass">已认证</string>
    <string name="loadfinish">没有更多了...</string>
    <string name="all">全部</string>
    <string name="select_program">选择项目</string>
    <string name="front">前一场</string>
    <string name="behind">后一场</string>
    <string name="article">文章</string>
    <string name="dynamic">动态</string>
    <string name="look_recommand">查看更多推荐</string>
    <string name="cancel">取消</string>
    <string name="friendquan">朋友圈</string>
    <string name="wechat_friends">微信好友</string>
    <string name="discover_all">全部</string>
    <string name="follow">关注</string>
    <string name="success_zan">点赞成功</string>
    <string name="cancel_zan">取消点赞成功</string>
    <string name="deleate">删除</string>
    <string name="tourist">游客</string>
    <string name="command_nulltip">请填写评论内容</string>
    <string name="command_success">评论成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="zan_null">暂无点赞</string>
    <string name="command_null">暂无评论</string>
    <string name="forbid_command">抱歉您无法评论本条评论</string>
    <string name="my_release">我的发布</string>
    <string name="data_null">暂无数据</string>
    <string name="write_command">写评论...</string>
    <string name="tourist_reply">游客回复：</string>
    <string name="author_reply">作者回复：</string>
    <string name="commandtip">请填写评论内容</string>
    <string name="command">评论</string>
    <string name="recommand">推荐</string>
    <string name="save_failed">保存失败</string>
    <string name="select_match">选择赛事</string>
    <string name="match_introduce">赛事介绍</string>
    <string name="match_intro">赛事简介</string>
    <string name="zhaikai">展开</string>
    <string name="match_name">比赛名称</string>
    <string name="match_time">比赛时间</string>
    <string name="match_award">比赛奖项</string>
    <string name="share_str">分享至</string>
    <string name="qq_kongjian">QQ空间</string>
    <string name="qq_friend">QQ好友</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="select_group">选择分组</string>
    <string name="apply_fee">报名费</string>
    <string name="shengyu_count">剩余名额</string>
    <string name="select_match_group">选择比赛分组</string>
    <string name="sure_pay">确认支付</string>
    <string name="linkman">联系人</string>

</resources>
