<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/program_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_FFFFFF"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_FFFFFF"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_3"
                android:layout_height="@dimen/dp_13"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/color_E50113" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:text="@string/select_group"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_21"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/tv_groupName"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/match_time"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/apply_fee"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shengyu_count"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_11" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_EFEFF4" />

        <com.zhouyou.recyclerview.XRecyclerView
            android:id="@+id/group_itemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.zhouyou.recyclerview.XRecyclerView>

    </LinearLayout>

</layout>
