<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/backgroundView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#50000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/color_FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/share_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_17"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/share_str"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_15" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/wechat_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/weChat_frient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_wechat_share" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/wechat_friends"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_13" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pengyouquan_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/friendQuan_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_friendsquan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/friendquan"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_13" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/qFriend_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/qqFriend_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_qq_share" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="QQ好友"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_13" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/qSpase_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/kongjian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_kongjian" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/friendquan"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_13" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:weightSum="4">

                    <LinearLayout
                        android:id="@+id/weibo_layout"
                        android:layout_width="@dimen/dp_6"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/weibo_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_weibo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_5"
                            android:text="@string/sina_weibo"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_13" />
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_5"
                    android:layout_marginTop="@dimen/sp_15"
                    android:background="@color/color_EFEFF4" />

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12"
                    android:text="@string/cancel"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_15" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</layout>
