<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="discoverVm"
            type="com.huasport.smartsport.ui.discover.vm.DiscoverVm"/>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:background="@color/color_FF8F00"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_FF8F00"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_weight="1"
                    android:background="@drawable/search_frame_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="@dimen/dp_15"
                        android:layout_height="@dimen/dp_15"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_5"
                        android:src="@mipmap/icon_search" />

                    <TextView
                        android:onClick="@{()->discoverVm.search()}"
                        android:id="@+id/tv_discover_search"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_25"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/dp_5"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical"
                        android:text="@string/discover_search_hint"
                        android:textColor="@color/color_FFFFFF"
                        android:textColorHint="@color/color_FFFFFF"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>

                <TextView
                    android:onClick="@{()->discoverVm.release()}"
                    android:id="@+id/tv_discover_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_15"
                    android:text="@string/release"
                    android:textColor="@color/color_FFFFFF" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:background="@color/color_FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/ll_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/discover_all"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/tab_all"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color_FF8F00"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_follow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_follow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/follow"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/tab_follow"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color_FF8F00"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dynamic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dynamic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/dynamic"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/tab_dynamic"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color_FF8F00"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_article"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/article"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <View
                    android:id="@+id/tab_article"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color_FF8F00"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/nulldata_layout"
            android:id="@+id/nulldata"
            android:visibility="gone" />

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smartRefreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:layout_marginTop="@dimen/dp_5"
            app:srlDisableContentWhenLoading="true"
            app:srlDisableContentWhenRefresh="true"
            app:srlEnableLoadMore="true"
            app:srlEnableLoadMoreWhenContentNotFull="true"
            app:srlEnableNestedScrolling="true"
            app:srlEnableOverScrollDrag="true"
            app:srlEnableRefresh="true">

            <com.zhouyou.recyclerview.XRecyclerView
                android:id="@+id/xrecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.zhouyou.recyclerview.XRecyclerView>

            <com.huasport.smartsport.custom.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_20"
                app:srlDrawableArrow="@mipmap/icon_defaultheader_yes"
                app:srlDrawableArrowSize="@dimen/dp_20" />

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    </LinearLayout>


</layout>
